Ldml short and longtexts (#3274)
* Fix e2e tests for multi-region

RISDEV-3081

* Update gradle/actions digest to 9d95dbe (#3268)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* Update cgr.dev/chainguard/redis Docker digest to 18b326e (#3265)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* Update github/codeql-action action to v4 (#3270)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* Update all-frontend-non-major-dependencies (#3267)

* Update all-frontend-non-major-dependencies

* Revert Dockerfile.prod

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Anne <158598611+anne-ds@users.noreply.github.com>

* Update cgr.dev/chainguard/nginx Docker digest to e4418e1 (#3271)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* Remove suggestions expectation in tests

RISDEV-9286

* Update all-backend-non-major-dependencies

* Adjust short and long texts

RISDEV-9305 RISDEV-9396 RISDEV-9307

---------

Co-authored-by: Nadine Kost <nadine.kost@digitalservice.bund.de>
Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Hanna Prinz <hanna.prinz@digitalservice.bund.de>